# functional-proteomics-workbench

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile.api  Dockerfile.web  HANDOFF.md  Makefile  Procfile  README.md  REVIEW.md  package.json  pnpm-lock.yaml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: implementation.md  spec.md
.github/workflows/: automerge.yml  ci.yml  cleanup-agent.yml  eval.yml  (+4 more)
agent_policies/: report_style.md  retrieval_policy.md  tool_selection_policy.yaml
corpus_discovery/: il10_lps_candidate_manifest.json  il10_lps_config.json
demo_data/: manifest.json
docs/: .harness-smoketest.md  ANALYSIS_METHODS.md  ARCHITECTURE.md  CORPUS.md  CORPUS_DISCOVERY.md  DATA_CONTRACTS.md  DEMO_DECISIONS.md  DEMO_RUNBOOK.md  DEVELOPMENT_WORKFLOW.md  EVALS.md  FINAL_WALKTHROUGH_SCRIPT.md  MCP_TOOLS.md  OPEN_QUESTIONS.md  PROJECT_BRIEF.md  ROADMAP.md  RUNNER_SETUP.md  SECURITY.md  TRACE_MODEL.md  UI_DIRECTION.md
evals/: README.md  __init__.py
scripts/: build-issue-context.sh  build-pr-feedback.sh  build_demo_web_artifacts.py  cleanup-agent-workspace.sh  demo_reset.py  deployment_smoke.py  discover_candidate_papers.py  seed_demo_project.py  spawn-impl-agent.sh  spawn-review-agent.sh  spawn-spec-agent.sh  wait-for-pr-event.sh
services/api/: pyproject.toml
services/api/src/fpw_api/: __init__.py  app.py  chat.py  mcp.py  traces.py
services/api/src/fpw_api/tools/: __init__.py  adapters.py  mvp.py  registry.py
services/api/tests/: test_app.py  test_chat.py  test_mcp.py  test_tool_registry.py  test_traces.py
(+52 files in other folders)
