[project]
name = "functional-proteomics-api"
version = "0.1.0"
description = "FastAPI backend service for the functional proteomics workbench"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1",
    "functional-proteomics-shared-schemas",
    "sqlmodel>=0.0.22,<1",
    "uvicorn[standard]>=0.34,<1",
]

[tool.uv.sources]
functional-proteomics-shared-schemas = { path = "../../packages/shared-schemas", editable = true }

[dependency-groups]
dev = [
    "httpx>=0.28,<1",
    "pytest>=8.0",
    "pyright>=1.1.390",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fpw_api"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.11"
typeCheckingMode = "standard"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
